# telegram-automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py  runtime.py
app/services/: chat_state.py  content_filter.py  history_store.py  llm.py  message_counter.py  recent_messages.py  reply_policy.py
app/telegram/: __init__.py  client.py  handlers.py
app/utils/: locking.py
deploy/: telegram-automation.service
tests/: test_chat_state.py  test_config.py  test_content_filter.py  test_history_store.py  test_llm.py  test_reply_policy.py
